Open API with Beautification on demand

--- a/config.default.json
+++ b/config.default.json
@@ -59,7 +59,7 @@
     "report": []
   },
   "api": {
-    "allowAnonymousReadWrite": false,
+    "allowAnonymousReadWrite": true,
     "allowAnonymousRead": true,
     "requireSSL": false
   },
