--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "flatten.js": "0.1.0",
     "handlebars": "~2.0.0-alpha.2",
     "jade": "~1.4.2",
+    "js-beautify": "^1.5.10",
     "less": "~1.7.3",
     "lynx": "~0.1.1",
     "lz-string": "~1.3.3",
