--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "name": "jsbin",
   "description": "Collaborative JavaScript Debugging App",
-  "main": "./lib/app",
+  "main": "./lib/app.js",
   "version": "3.30.3",
   "preferGlobal": "true",
   "homepage": "http://jsbin.com",
@@ -18,7 +18,7 @@
     "url": "git://github.com/jsbin/jsbin.git"
   },
   "scripts": {
-    "start": "(sleep 2 && open http://localhost:3000) & ./bin/jsbin",
+    "start": "node ./lib/app.js",
     "test": "node_modules/mocha/bin/_mocha -t 25000 --ui bdd test/**/*.test.js",
     ":install": "build/install.js",
     "preupdate": "node build/pre-update.js",
