--- a/config.default.json
+++ b/config.default.json
@@ -2,13 +2,13 @@
   "env": "development",
   "timezone": "UTC",
   "url": {
-    "host": "localhost:8080",
+    "host": "localhost:3000",
     "prefix": "/",
     "ssl": false,
     "static": false,
     "runner": false
   },
-  "max-request-size": "50MB",
+  "max-request-size": "1MB",
   "max-age": 86400,
   "store": {
     "adapter": "sqlite",
@@ -16,9 +16,9 @@
       "location": "jsbin.sqlite"
     },
     "mysql": {
-      "host": "in-openshift",
-      "user": "adminmGz371c",
-      "password": "MxuW2JG7wtm9",
+      "host": "localhost",
+      "user": "root",
+      "password": "",
       "database": "jsbin",
       "charset": "utf8mb4",
       "collate": "utf8mb4_unicode_ci"
@@ -59,7 +59,7 @@
     "report": []
   },
   "api": {
-    "allowAnonymousReadWrite": true,
+    "allowAnonymousReadWrite": false,
     "allowAnonymousRead": true,
     "requireSSL": false
   },
