--- a/config.default.json
+++ b/config.default.json
@@ -2,13 +2,13 @@
   "env": "development",
   "timezone": "UTC",
   "url": {
-    "host": "localhost:3000",
+    "host": "localhost:8080",
     "prefix": "/",
     "ssl": false,
     "static": false,
     "runner": false
   },
-  "max-request-size": "1MB",
+  "max-request-size": "100MB",
   "max-age": 86400,
   "store": {
     "adapter": "sqlite",
@@ -45,7 +45,7 @@
     "logger": "default"
   },
   "security": {
-    "allowAnonymousPreview": false
+    "allowAnonymousPreview": true
   },
   "client": {
     "user": true
@@ -59,7 +59,7 @@
     "report": []
   },
   "api": {
-    "allowAnonymousReadWrite": false,
+    "allowAnonymousReadWrite": true,
     "allowAnonymousRead": true,
     "requireSSL": false
   },
